# ardupilot-log-diagnosis-exploration

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data_schema/: labeled-case-schema.json
docs/: architecture.md  day-1-status.md  decision-baseline.md  evaluation-plan.md  mvp-scope.md  parser-design.md
examples/: sample-log.json  sample-report.md
src/: __init__.py
src/diagnostics/: README.md
src/parser/: README.md  __init__.py  cli.py  core.py  dataflash_adapter.py  models.py
tests/: test_dataflash_adapter.py  test_parser_core.py
